# github-copilot-spec-kit-automation

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/agents/: ui-test-heal.agent.md
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/: __init__.py
apps/demo_playwright/: __init__.py
apps/demo_playwright/locators/: __init__.py  todo_locators.py
apps/demo_playwright/pages/: __init__.py  todo_page.py
apps/demo_playwright/test_data/: __init__.py  todo_data.py
apps/internet_herokuapp/: __init__.py
apps/internet_herokuapp/locators/: __init__.py  login_locators.py
apps/internet_herokuapp/pages/: __init__.py  login_page.py
apps/internet_herokuapp/test_data/: __init__.py  login_data.py
fixtures/: __init__.py  browser_fixtures.py
framework_core/: __init__.py
framework_core/browser/: __init__.py  browser_factory.py
framework_core/config/: __init__.py  environments.py  settings.py
framework_core/pages/: __init__.py  base_page.py
framework_core/reporting/: __init__.py  artifact_capture.py  logger.py
framework_core/utils/: __init__.py  waits.py
specs/001-ui-automation-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ui-automation-framework/checklists/: requirements.md
specs/001-ui-automation-framework/contracts/: artifact-naming-contract.md  cli-interface.md  configuration-contract.md  page-object-contract.md
tests/: conftest.py
tests/demo_playwright/: conftest.py  test_scenarios.py
tests/internet_herokuapp/: conftest.py  test_scenarios.py
