[project]
name = "ui-automation-framework"
version = "0.1.0"
description = "Plug-and-play, enterprise-grade UI automation framework (Playwright + pytest, Page Object Model)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.48.0",
    "pytest>=8.3.0",
    "pytest-xdist>=3.6.0",
    "pytest-html>=4.1.1",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]

[tool.uv]
# This project is a test-automation framework, not a distributable library:
# skip building/installing it as a package and rely on `pythonpath` below so
# framework_core/fixtures/apps are importable directly from the repo root.
package = false

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["framework_core", "fixtures", "apps", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "D",   # pydocstyle (docstrings)
]
ignore = [
    "D203", # conflicts with D211 (no-blank-line-before-class)
    "D213", # conflicts with D212 (multi-line-summary-first-line)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]      # test modules use step-comment headers, not docstrings
"apps/**/test_data/**" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "smoke: minimal, fast, must-pass-always subset",
    "regression: full regression coverage",
    "sanity: quick post-deploy sanity subset",
    "critical: business-critical flows",
]
